[gd_scene load_steps=5 format=3 uid="uid://by21jxo63mkrx"]

[ext_resource type="Script" path="res://Objects/Console2D/console_2d_repair.gd" id="1_wox4u"]
[ext_resource type="PackedScene" uid="uid://dniufwkbft27t" path="res://Objects/Console2D/Assets_Console/Gameboy.glb" id="3_jm5mq"]

[sub_resource type="PrismMesh" id="PrismMesh_0avmq"]

[sub_resource type="BoxShape3D" id="BoxShape3D_b5xqb"]
size = Vector3(2.6498, 2.47546, 1.93933)

[node name="Console2d" type="Node3D"]
script = ExtResource("1_wox4u")

[node name="GameboyRoot" type="Node3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0843829, 1.67098, -0.00249892)

[node name="Gameboy" parent="GameboyRoot" instance=ExtResource("3_jm5mq")]
unique_name_in_owner = true
transform = Transform3D(0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, 0, -2.11291, 0)

[node name="Screw_1" type="MeshInstance3D" parent="GameboyRoot/Gameboy"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, -3.55271e-15, 0, -8.88178e-16, 2, 3.70351, 14.8197, -0.723579)
mesh = SubResource("PrismMesh_0avmq")
skeleton = NodePath("../../..")

[node name="Screw_1_In" type="Marker3D" parent="GameboyRoot/Gameboy"]
transform = Transform3D(2.58743, -7.10543e-15, 3.05045, -3.05045, -1.74846e-07, 2.58743, 1.33339e-07, -4, -1.131e-07, 3.70351, 14.8197, -0.723579)
gizmo_extents = 1.0

[node name="Screw_1_Out" type="Marker3D" parent="GameboyRoot/Gameboy"]
transform = Transform3D(2.58743, -7.10543e-15, 3.05045, -3.05045, -1.74846e-07, 2.58743, 1.33339e-07, -4, -1.131e-07, 3.70351, 14.8197, -7.0197)
gizmo_extents = 1.0

[node name="Screw_2" type="MeshInstance3D" parent="GameboyRoot/Gameboy"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, -3.55271e-15, 0, -8.88178e-16, 2, 4.11795, 9.69179, -1.55469)
mesh = SubResource("PrismMesh_0avmq")
skeleton = NodePath("../../..")

[node name="Screw_2_In" type="Marker3D" parent="GameboyRoot/Gameboy"]
transform = Transform3D(2.58743, -7.10543e-15, 3.05045, -3.05045, -1.74846e-07, 2.58743, 1.33339e-07, -4, -1.131e-07, 4.11795, 9.69179, -1.55469)
gizmo_extents = 1.0

[node name="Screw_2_Out" type="Marker3D" parent="GameboyRoot/Gameboy"]
transform = Transform3D(2.58743, -7.10543e-15, 3.05045, -3.05045, -1.74846e-07, 2.58743, 1.33339e-07, -4, -1.131e-07, 4.11795, 9.69179, -7.85081)
gizmo_extents = 1.0

[node name="Screw_3" type="MeshInstance3D" parent="GameboyRoot/Gameboy"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, -3.55271e-15, 0, -8.88178e-16, 2, -3.61656, 14.8197, -0.723579)
mesh = SubResource("PrismMesh_0avmq")
skeleton = NodePath("../../..")

[node name="Screw_3_In" type="Marker3D" parent="GameboyRoot/Gameboy"]
transform = Transform3D(2.58743, -7.10543e-15, 3.05045, -3.05045, -1.74846e-07, 2.58743, 1.33339e-07, -4, -1.131e-07, -3.61656, 14.8197, -0.723579)
gizmo_extents = 1.0

[node name="Screw_3_Out" type="Marker3D" parent="GameboyRoot/Gameboy"]
transform = Transform3D(2.58743, -7.10543e-15, 3.05045, -3.05045, -1.74846e-07, 2.58743, 1.33339e-07, -4, -1.131e-07, -3.61656, 14.8197, -7.0197)
gizmo_extents = 1.0

[node name="Screw_4" type="MeshInstance3D" parent="GameboyRoot/Gameboy"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, -3.55271e-15, 0, -8.88178e-16, 2, -4.10748, 9.69179, -1.55469)
mesh = SubResource("PrismMesh_0avmq")
skeleton = NodePath("../../..")

[node name="Screw_4_In" type="Marker3D" parent="GameboyRoot/Gameboy"]
transform = Transform3D(2.58743, -7.10543e-15, 3.05045, -3.05045, -1.74846e-07, 2.58743, 1.33339e-07, -4, -1.131e-07, -4.10748, 9.69179, -1.55469)
gizmo_extents = 1.0

[node name="Screw_4_Out" type="Marker3D" parent="GameboyRoot/Gameboy"]
transform = Transform3D(2.58743, -7.10543e-15, 3.05045, -3.05045, -1.74846e-07, 2.58743, 1.33339e-07, -4, -1.131e-07, -4.10748, 9.69179, -7.85081)
gizmo_extents = 1.0

[node name="Area3D" type="Area3D" parent="."]
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0969957, 1.2538, 0.218967)
shape = SubResource("BoxShape3D_b5xqb")

[node name="Camera3D_Inspecting" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.25641, 4.3983)
cull_mask = 1048573
fov = 70.0
size = 3.857

[node name="Camera3D_Screw_InsideBattery" type="Camera3D" parent="."]
transform = Transform3D(0.993848, 0.0175296, -0.109356, 0.108705, 0.0345807, 0.993472, 0.0211968, -0.999248, 0.0324624, 0.0959222, 2.6927, -0.877882)
cull_mask = 1048573
fov = 70.0
size = 3.857

[node name="Camera3D_Lid" type="Camera3D" parent="."]
transform = Transform3D(0.87462, -0.212527, 0.435744, 0, 0.898794, 0.438371, -0.48481, -0.383408, 0.786103, 1.89243, 2.18393, 2.87043)
cull_mask = 1048573
fov = 70.0
size = 3.857

[node name="Camera3D_Screw_1st" type="Camera3D" parent="."]
transform = Transform3D(0.87462, -0.212527, 0.435744, 0, 0.898794, 0.438371, -0.48481, -0.383408, 0.786103, 1.5625, 1.85201, 2.27522)
cull_mask = 1048573
fov = 70.0
size = 3.857

[node name="Camera3D_Screw_2nd" type="Camera3D" parent="."]
transform = Transform3D(-0.730591, 0.299327, -0.61371, 2.49766e-08, 0.898794, 0.438371, 0.682815, 0.32027, -0.656651, -1.45379, 2.23744, -2.10519)
cull_mask = 1048573
fov = 70.0
size = 3.857

[node name="Gameboy_Inspecting" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.0174, 0)
gizmo_extents = 1.0

[node name="GameboyRoot3" type="Node3D" parent="Gameboy_Inspecting"]
visible = false

[node name="Gameboy" parent="Gameboy_Inspecting/GameboyRoot3" instance=ExtResource("3_jm5mq")]
transform = Transform3D(0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, 0, -2.11291, 0)

[node name="Gameboy_Lid" type="Marker3D" parent="."]
transform = Transform3D(-0.997026, 0.0770671, -3.36871e-09, 0, -4.37114e-08, -1, -0.0770671, -0.997026, 4.35814e-08, -0.0843829, 0.117806, -0.671915)
gizmo_extents = 1.0

[node name="Gameboy3" parent="Gameboy_Lid" instance=ExtResource("3_jm5mq")]
unique_name_in_owner = true
transform = Transform3D(0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, 0, 0, 0)
visible = false

[node name="Gameboy_Screw_1" type="Marker3D" parent="."]
transform = Transform3D(0.646856, -0.762612, 3.33348e-08, 0, -4.37114e-08, -1, 0.762612, 0.646856, -2.8275e-08, 1.5483, 0.135005, -0.604055)
gizmo_extents = 1.0

[node name="GameboyRoot2" type="Node3D" parent="Gameboy_Screw_1"]
unique_name_in_owner = true
visible = false

[node name="Gameboy" parent="Gameboy_Screw_1/GameboyRoot2" instance=ExtResource("3_jm5mq")]
transform = Transform3D(0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, 0, -2.11291, 0)

[node name="Gameboy_Screw_2" type="Marker3D" parent="."]
transform = Transform3D(0.646856, -0.762612, 3.33348e-08, 0, -4.37114e-08, -1, 0.762612, 0.646856, -2.8275e-08, 0.652028, 0.125404, 0.100531)
gizmo_extents = 1.0

[node name="GameboyRoot3" type="Node3D" parent="Gameboy_Screw_2"]
unique_name_in_owner = true
visible = false

[node name="Gameboy" parent="Gameboy_Screw_2/GameboyRoot3" instance=ExtResource("3_jm5mq")]
transform = Transform3D(0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, 0, -2.11291, 0)

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
